second version, working all features except workmanager

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -36,5 +36,6 @@
     <dimen name="detail_action_button_padding_vertical">20dp</dimen>
     <dimen name="detail_topbar_padding_bottom">24dp</dimen>
     <dimen name="detail_topbar_back_button_padding_horizontal">24dp</dimen>
+    <dimen name="medium_padding">8dp</dimen>
 
 </resources>
